--- a/generators/entity/templates/flutter/lib/bloc/entity.state.ejs
+++ b/generators/entity/templates/flutter/lib/bloc/entity.state.ejs
@@ -5,7 +5,6 @@ const entityFileName = context.entityFileName;
 const entityClassPlural = context.entityClassPlural;
 const entityClassPluralLowered = context.entityClassPluralLowered;
 const entityClass = context.entityClass;
-const entityClassCamelCase = context.entityClassCamelCase;
 const fields = context.fields;
 const relationships = context.relationships;
 const primaryKeyType = context.primaryKeyType;
@@ -40,6 +39,9 @@ fields.forEach(field => {
       field.fieldType = 'DateTime';
       field.defaultValue = 'null';
       context.hasDateTime = true;
+    } else if (field.fieldType === 'Boolean') {
+      field.fieldType = 'bool';
+      field.defaultValue = false;
     } else if(field.fieldIsEnum) {
       field.defaultValue = 'null';
     } else {
@@ -63,7 +65,7 @@ class <%= entityClass %>State extends Equatable {
   final <%= entityClass %> loaded<%= entityClass %>;
   final bool editMode;
   final <%= entityClass %>DeleteStatus deleteStatus;
-  final <%= entityClass %>StatusUI <%= entityClassCamelCase %>StatusUI;
+  final <%= entityClass %>StatusUI <%= entityInstance %>StatusUI;
 
   final FormzStatus formStatus;
   final String generalNotificationKey;
@@ -76,7 +78,7 @@ class <%= entityClass %>State extends Equatable {
   <%= entityClass %>State(
     <%_ fields.forEach(field => { _%><%_ if(field.fieldType === 'DateTime') { _%><%= field.fieldNameCapitalized %>Input <%= field.fieldName %>,<%_ } _%><%_ }); _%> {
     this.<%= entityClassPluralLowered %> = const [],
-    this.<%= entityClassCamelCase %>StatusUI = <%= entityClass %>StatusUI.init,
+    this.<%= entityInstance %>StatusUI = <%= entityClass %>StatusUI.init,
     this.loaded<%= entityClass %> = const <%= entityClass %>(<%- idField.defaultValue %>, <%_ fields.forEach(field => { _%> <%- field.defaultValue %>, <%_ }); _%><%_ relationships.forEach(relationship => { _%> null, <%_ }); _%>),
     this.editMode = false,
     this.formStatus = FormzStatus.pure,
@@ -97,7 +99,7 @@ this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapit
 
   <%= entityClass %>State copyWith({
     List<<%= entityClass %>> <%= entityClassPluralLowered %>,
-    <%= entityClass %>StatusUI <%= entityClassCamelCase %>StatusUI,
+    <%= entityClass %>StatusUI <%= entityInstance %>StatusUI,
     bool editMode,
     <%= entityClass %>DeleteStatus deleteStatus,
     <%= entityClass %> loaded<%= entityClass %>,
@@ -114,7 +116,7 @@ this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapit
         <%_ } _%>
         <%_ }); _%>
       <%= entityClassPluralLowered %>: <%= entityClassPluralLowered %> ?? this.<%= entityClassPluralLowered %>,
-      <%= entityClassCamelCase %>StatusUI: <%= entityClassCamelCase %>StatusUI ?? this.<%= entityClassCamelCase %>StatusUI,
+      <%= entityInstance %>StatusUI: <%= entityInstance %>StatusUI ?? this.<%= entityInstance %>StatusUI,
       loaded<%= entityClass %>: loaded<%= entityClass %> ?? this.loaded<%= entityClass %>,
       editMode: editMode ?? this.editMode,
       formStatus: formStatus ?? this.formStatus,
@@ -129,7 +131,7 @@ this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapit
   }
 
   @override
-  List<Object> get props => [<%= entityClassPluralLowered %>, <%= entityClassCamelCase %>StatusUI,
+  List<Object> get props => [<%= entityClassPluralLowered %>, <%= entityInstance %>StatusUI,
      loaded<%= entityClass %>, editMode, deleteStatus, formStatus, generalNotificationKey, 
      <%_ fields.forEach(field => { _%><%= field.fieldName %>%>,<%_ }); _%>];
 
